--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"Hello World"
+<html>
+  <head>
+    <title>Gokulam Biotech</title>
+  </head>
+  <body bgcolor=white>
+    <h1> Welcome to GokulamBiotech</h1>
+  </body>
+</html>
