--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 title: Not Found
-description: This does not exist
+description: Sorry ! This Link does not exist.
 permalink: /404.html
 sitemap: false
 ---
