--- a/about.html
+++ b/about.html
@@ -1,14 +1,15 @@
 ---
-title: Our team
-description: We've built an amazing team of developers, marketers, designers and sales people.
+title: Gokulam BioTech
+description: We are pioneers in the field of liquid based formulations of bio products such as bio fertilizers, bio pesticides and bio fungicides in India.
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
-	{% for person in site.staff_members %}
+	{% for person in site.products_info %}
 		<li>
 			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
-			<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter }}">{{ person.name }}</a></div>
-			<div class="position">{{ person.position }}</div>
+			<div class="name"><a target="_blank" href="mailto:{{ person.email }}">{{ person.name }}</a></div>
+			<div class="position">{{ person.position}}</div>
+			<div class="position">{{ person.blurb}}</div>
 		</li>
 	{% endfor %}
 </ul>
