products menu moved

--- a/about.html
+++ b/about.html
@@ -2,14 +2,45 @@
 title: Gokulam BioTech
 description: We are pioneers in the field of liquid based formulations of bio products such as bio fertilizers, bio pesticides and bio fungicides in India.
 ---
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
-<ul class="staff">
-	{% for person in site.products_info %}
-		<li>
-			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
-			<div class="name"><a target="_blank" href="mailto:{{ person.email }}">{{ person.name }}</a></div>
-			<div class="position">{{ person.position}}</div>
-			<div class="position">{{ person.blurb}}</div>
-		</li>
-	{% endfor %}
-</ul>
+
+<h2> Organic agriculture and use of biofertilizers </h2>
+
+<p>
+In the olden days, farming was carried out in a traditional manner. Most farmers used to
+have a number of farm animals in their farm and the farmyard manure generated in the farm
+was used for raising crops. In addition, most of the farm-generated biomass was also used for
+raising crops. No chemical fertilizers or pesticides were heard of or used. During this time
+period, farmers were getting very low yield of crops, but were getting very good quality
+produce. However, the yield obtained by farmers using this traditional method of farming was
+not adequate to meet the food demands of the growing population. </p>
+
+<p>
+Through green revolution, India was able to meet food demands of its growing
+population. Hybrid varieties of crops not only required higher inputs of chemical fertilizers,
+but also were susceptible to many insect pests and diseases. This created high demand and
+indiscriminate usage of pesticides and fungicides. Crops thus grown also contained high
+residues of chemical pesticides which are detrimental to health.</p>
+
+<p>
+Year after year, addition of chemical fertilizers also had depleted
+beneficial microbes from the soil. This, combined with lesser and lesser application of
+farmyard manure, resulted in lower bioactivity of soil and crop yield.
+Application of chemical fertilizers results in ground water contamination by nitrates
+leaching through the soil profile. Denitrification of nitrogenous fertilizers from soil, and gases
+from such process contribute to greenhouse effect/alteration of ozone layer. Most of all, a
+small proportion of nitrogen, about 50% of phosphates and 100% potash are imported,
+causing a strain on the foreign exchange reserve. The above scenario led agriculture into a full
+circle where organic manure biofertilizers regained importance.</p>
+</p>
+
+<p>
+In order to improve soil health, protect the environment, and provide nutrients to crops
+in a natural way, GOKULAM BIOTECH has introduced various BIOFERTILIZERS in
+</p>
+
+<h3> LIQUID formulations.</h3>
+<p>
+Liquid formulations of biofertilizers of GOKULAM BIOTECH are better in terms of
+virulency and shelf life than carrier - based biofertilizers or liquid broth formulations. LIQUID
+biofertilizers of GOKULAM BIOTECH have a shelf life of more than one year.
+</p>
