--- a/products.html
+++ b/products.html
@@ -1,33 +1,8 @@
 ---
 title: Products
-heading: Find the perfect product for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
-pricing_table:
-  - name: Basic
-    color: "#8e8e8e"
-    features:
-      - text: $25 per month
-        highlight: true
+heading: Gokulam BioTech Products
+description: All products include minimum Guarantee.
 
-    call_to_action:
-      link: http://mysite.com?plan=basic
-      text: Get started
-  - name: Pro
-    color: "#4a4a4a"
-    features:
-      - text: $99 per month
-        highlight: true
-    call_to_action:
-      link: http://mysite.com?plan=pro
-      text: Get started
-  - name: Professional
-    color: "#000000"
-    features:
-      - text: $299 per month
-        highlight: true
-    call_to_action:
-      link: http://mysite.com?plan=professional
-      text: Get started
 faq:
   - question: What types of payment do you accept?
     answer: Credit cards including MasterCard, Visa or American Express.
@@ -36,24 +11,21 @@ faq:
   - question: Do you offer pricing for nonprofit organizations?
     answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
   - question: Questions?
-    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
+    answer: Contact us for any further questions at <a href="/contact/">contact</a>.
 ---
-<div class="plans">
-	{% for plan in page.pricing_table %}
-		<ul class="plan">
-			<li style="background: {{ plan.color }}">
-				<h3>{{ plan.name }}</h3>
-			</li>
-			{% for feature in plan.features %}
-				<li {% if feature.highlight %} class="highlighted"{% endif %}>{{ feature.text }}</li>
-			{% endfor %}
 
-			{% if plan.call_to_action %}
-				<li class="pricing-cta"><div class="button"><a style="background: {{ plan.color }}" href="{{ plan.call_to_action.link }}">{{ plan.call_to_action.text }} &rarr;</a></div></li>
-			{% endif %}
-		</ul>
+
+<h2> LIQUID Bio-Fertilizers.</h2>
+
+<ul class="staff">
+	{% for product in site.products_info %}
+		<li>
+			<div class="name">{{ product.name }}</a></div>
+			<div class="position">{{ product.shortdescription}}</div>
+		</li>
 	{% endfor %}
-</div>
+</ul>
+
 
 {% if page.faq %}
 	<h2>Pricing FAQ</h2>
