--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: The
-description: Track and optimize your sales team in real time
+title: Gokulam Biotech
+description: Leading Bio-Fertilizer Manufacturer in India
 ---
 <section class="hero">
 	<div class="text-container">
@@ -8,6 +8,18 @@ description: Track and optimize your sales team in real time
 		<p class="subtext editable"> is <strong> pioneer </strong> in the field of liquid based formulations of bio products such as bio fertilizers, bio pesticides and bio fungicides.</p>
 		<div>
 			<img src="/images/biofarm.jpg"/>
+		</div>
+	</div>
+</section>
+
+<section class="testimonial">
+	<div class="container flex">
+		<div class="testimonial-block">
+			<div class="image"><img src="/images/iscop_logo.jpg" alt="ISCOP" class="editable"></div>
+			<blockquote>
+				<p class="editable"> Certified by ISCOP </p>
+				<p class="editable author">INDIAN SOCIETY FOR CERTIFICATION OF ORGANIC PRODUCTS</p>
+			</blockquote>
 		</div>
 	</div>
 </section>
@@ -31,7 +43,7 @@ description: Track and optimize your sales team in real time
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://avatars2.githubusercontent.com/u/5330364?s=400&v=4" alt="Prabhakaran" class="editable"></div>
 				<blockquote>
-					<p class="editable"> The best product I have ever used ! </p>
+					<p class="editable"> Works as it is supposed to work! </p>
 					<p class="editable author">Prabakaran - CEO of Global Corp.</p>
 				</blockquote>
 			</div>
