--- a/careers.html
+++ b/careers.html
@@ -21,7 +21,7 @@ faq:
   - question: How do I apply for the job?
     answer: Send your cv to the contact HR email address.
   - question: HR email address?
-    answer: Contact us for any further questions at <a href="mailto:">hr-gokulambiotech@gmail.com</a>.
+    answer: Contact us for any further questions at <a href="mailto:">gokulambiotech@gmail.com</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
@@ -41,7 +41,7 @@ faq:
 </div>
 
 {% if page.faq %}
-	<h2>Pricing FAQ</h2>
+	<h2>FAQ</h2>
 	<dl class="faq">
 		{% for item in page.faq %}
 			<div>
