--- a/products.html
+++ b/products.html
@@ -18,8 +18,27 @@ faq:
 <h2> LIQUID Bio-Fertilizers.</h2>
 
 <ul class="staff">
-	{% for product in site.products_info %}
+	{% for product in site.products %}
     {% if product.fertilizer %}
+		<li>
+      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
+			<div class="name">
+        <a href="{% include relative-src.html src=product.link %}
+        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
+          {{ product.name}}
+        </a>
+        </div>
+			<div class="position">{{ product.shortdescription}}</div>
+		</li>
+    {% endif %}
+	{% endfor %}
+</ul>
+
+<h2> LIQUID Bio-Composing.</h2>
+
+<ul class="staff">
+	{% for product in site.products_info %}
+    {% if product.composing %}
 		<li>
       <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
 			<div class="name">{{ product.name }}</a></div>
@@ -29,7 +48,47 @@ faq:
 	{% endfor %}
 </ul>
 
-<h2> LIQUID Bio-Composing.</h2>
+<h2> LIQUID Bio-Pesticides.</h2>
+
+<ul class="staff">
+	{% for product in site.products_info %}
+    {% if product.composing %}
+		<li>
+      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
+			<div class="name">{{ product.name }}</a></div>
+			<div class="position">{{ product.shortdescription}}</div>
+		</li>
+    {% endif %}
+	{% endfor %}
+</ul>
+
+<h2> LIQUID Bio-Fungicides.</h2>
+
+<ul class="staff">
+	{% for product in site.products_info %}
+    {% if product.fungicide %}
+		<li>
+      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
+			<div class="name">{{ product.name }}</a></div>
+			<div class="position">{{ product.shortdescription}}</div>
+		</li>
+    {% endif %}
+	{% endfor %}
+</ul>
+
+<h2> Growth Enhancers.</h2>
+
+<ul class="staff">
+	{% for product in site.products_info %}
+    {% if product.enhancer %}
+		<li>
+      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
+			<div class="name">{{ product.name }}</a></div>
+			<div class="position">{{ product.shortdescription}}</div>
+		</li>
+    {% endif %}
+	{% endfor %}
+</ul>
 
 
 {% if page.faq %}
