--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@ faq:
 ---
 
 
-<h2> LIQUID Bio-Fertilizers.</h2>
+<h2> Liquid Bio-Fertilizers.</h2>
 
 <ul class="staff">
 	{% for product in site.products %}
@@ -34,42 +34,57 @@ faq:
 	{% endfor %}
 </ul>
 
-<h2> LIQUID Bio-Composing.</h2>
+<h2> Liquid Bio-Composing.</h2>
 
 <ul class="staff">
-	{% for product in site.products_info %}
-    {% if product.composing %}
+	{% for product in site.products %}
+    {% if product.composting %}
 		<li>
       <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-			<div class="name">{{ product.name }}</a></div>
+      <div class="name">
+        <a href="{% include relative-src.html src=product.link %}
+        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
+          {{ product.name}}
+        </a>
+        </div>
 			<div class="position">{{ product.shortdescription}}</div>
 		</li>
     {% endif %}
 	{% endfor %}
 </ul>
 
-<h2> LIQUID Bio-Pesticides.</h2>
+<h2> Liquid Biofertilizer-consortia.</h2>
 
 <ul class="staff">
-	{% for product in site.products_info %}
-    {% if product.composing %}
+	{% for product in site.products %}
+    {% if product.biofertilizer-consortia %}
 		<li>
       <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-			<div class="name">{{ product.name }}</a></div>
+      <div class="name">
+        <a href="{% include relative-src.html src=product.link %}
+        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
+          {{ product.name}}
+        </a>
+        </div>
 			<div class="position">{{ product.shortdescription}}</div>
 		</li>
     {% endif %}
 	{% endfor %}
 </ul>
 
-<h2> LIQUID Bio-Fungicides.</h2>
+<h2> Growth Enhancers </h2>
 
 <ul class="staff">
-	{% for product in site.products_info %}
-    {% if product.fungicide %}
+	{% for product in site.products %}
+    {% if product.enhancers %}
 		<li>
       <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-			<div class="name">{{ product.name }}</a></div>
+      <div class="name">
+        <a href="{% include relative-src.html src=product.link %}
+        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
+          {{ product.name}}
+        </a>
+        </div>
 			<div class="position">{{ product.shortdescription}}</div>
 		</li>
     {% endif %}
@@ -79,7 +94,7 @@ faq:
 <h2> Growth Enhancers.</h2>
 
 <ul class="staff">
-	{% for product in site.products_info %}
+	{% for product in site.products %}
     {% if product.enhancer %}
 		<li>
       <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
