--- a/products.html
+++ b/products.html
@@ -14,96 +14,20 @@ faq:
     answer: Contact us for any further questions at <a href="/contact/">contact</a>.
 ---
 
-
-<h2> Liquid Bio-Fertilizers.</h2>
-
-<ul class="staff">
-	{% for product in site.products %}
-    {% if product.fertilizer %}
-		<li>
-      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-			<div class="name">
-        <a href="{% include relative-src.html src=product.link %}
-        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
-          {{ product.name}}
-        </a>
-        </div>
-			<div class="position">{{ product.shortdescription}}</div>
-		</li>
-    {% endif %}
-	{% endfor %}
-</ul>
-
-<h2> Liquid Bio-Composing.</h2>
-
-<ul class="staff">
-	{% for product in site.products %}
-    {% if product.composting %}
-		<li>
-      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-      <div class="name">
-        <a href="{% include relative-src.html src=product.link %}
-        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
-          {{ product.name}}
-        </a>
-        </div>
-			<div class="position">{{ product.shortdescription}}</div>
-		</li>
-    {% endif %}
-	{% endfor %}
-</ul>
-
-<h2> Liquid Biofertilizer-consortia.</h2>
-
-<ul class="staff">
-	{% for product in site.products %}
-    {% if product.biofertilizer-consortia %}
-		<li>
-      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-      <div class="name">
-        <a href="{% include relative-src.html src=product.link %}
-        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
-          {{ product.name}}
-        </a>
-        </div>
-			<div class="position">{{ product.shortdescription}}</div>
-		</li>
-    {% endif %}
-	{% endfor %}
-</ul>
-
-<h2> Growth Enhancers </h2>
-
-<ul class="staff">
-	{% for product in site.products %}
-    {% if product.enhancers %}
-		<li>
-      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-      <div class="name">
-        <a href="{% include relative-src.html src=product.link %}
-        " class="{{ class }}" {% if product.new_window %}target="_blank"{% endif %}>
-          {{ product.name}}
-        </a>
-        </div>
-			<div class="position">{{ product.shortdescription}}</div>
-		</li>
-    {% endif %}
-	{% endfor %}
-</ul>
-
-<h2> Growth Enhancers.</h2>
-
-<ul class="staff">
-	{% for product in site.products %}
-    {% if product.enhancer %}
-		<li>
-      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-			<div class="name">{{ product.name }}</a></div>
-			<div class="position">{{ product.shortdescription}}</div>
-		</li>
-    {% endif %}
-	{% endfor %}
-</ul>
+{% for link in site.data.navigation %}
+  {% if link.subfolder[0] %}
+      <ul class="staff">
+      {% for entry in link.subfolder %}
+        <li>
+          <h2>
+            <a href="{{ entry.url }}">{{ entry.page }}</a>
+          </h2>
+          <div class="position">{{ entry.shortdescription}}</div>
+        </li>
+      {% endfor %}
+      </ul>
+  {% endif %}
+{% endfor %}
 
 
 {% if page.faq %}
