--- a/products.html
+++ b/products.html
@@ -20,9 +20,9 @@ faq:
       {% for entry in link.subfolder %}
         <li>
           <h2>
+            <div class="square-image"><img src="{% src=entry.image_path %}" alt="{{ entry.page }}"/></div>
             <a href="{{ entry.url }}">{{ entry.page }}</a>
           </h2>
-          <div class="position">{{ entry.shortdescription}}</div>
         </li>
       {% endfor %}
       </ul>
