added downloads and 404 files

--- a/404.html
+++ b/404.html
@@ -1,6 +1,12 @@
 ---
-title: Not Found
+title: 404 Not Found
 description: Sorry ! This Link does not exist.
 permalink: /404.html
 sitemap: false
+redirect_from:
+- /download/
+- /script/
+- /js/
+- /images/
+- /css/
 ---
