--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ description: Leading Bio-Fertilizer Manufacturer in India
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://avatars2.githubusercontent.com/u/5330364?s=400&v=4" alt="Prabhakaran" class="editable"></div>
+				<div class="square-image">
+					<img src="https://avatars2.githubusercontent.com/u/5330364?s=400&v=4" alt="Prabhakaran" class="editable"></div>
 				<blockquote>
 					<p class="editable"> Works as it is supposed to work! </p>
 					<p class="editable author">Prabakaran - CEO of Global Corp.</p>
