--- a/people.html
+++ b/people.html
@@ -2,7 +2,10 @@
 title: Our team
 description: We help to built a better world.
 ---
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<p class="editor-link" style="text-align: center;">
+	<a href="cloudcannon:collections/_staff_members/" class="btn">
+		<strong>&#9998;</strong> Manage Staff members</a>
+</p>
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
