--- a/people.html
+++ b/people.html
@@ -2,15 +2,11 @@
 title: Our team
 description: We help to built a better world.
 ---
-<p class="editor-link" style="text-align: center;">
-	<a href="cloudcannon:collections/_staff_members/" class="btn">
-		<strong>&#9998;</strong> Manage Staff members</a>
-</p>
 <ul class="staff">
-	{% for person in site.staff_members %}
+	{% for person in site.people %}
 		<li>
 			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
-			<div class="name"><a target="_blank" href="mailto:{{ person.email }}">{{ person.name }}</a></div>
+			<div class="name"><a target="_blank" href="{% include relative-src.html src=person.link %}">{{ person.name }}</a></div>
 			<div class="position">{{ person.position}}</div>
 			<div class="position">{{ person.blurb}}</div>
 		</li>
