updated site content

--- a/products.html
+++ b/products.html
@@ -40,6 +40,6 @@ description: All products have minimum 1 year shelf-life.
 
 <section class="bottom-cta">
   <h2 class="editable"><strong>Gokulam Biotech</strong> - Comprehensive Product List</h2>
-  <div class="button alt"><a href="/download/Gokulam-eBook.pdf">Get Gokulam Biotech Products Book</a></div>
+  <div class="button alt"><a href="/download/Gokulam-eBook.pdf">Products Book</a></div>
 </section>
 </div>
