updated site button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 			<div class="text editable">
 				<h2>How can we <strong>double</strong> your harvesting revenue?</h2>
 				<p> We provide the solution, check our</p>
-				<div class="button alt"><a href="products/">Products</a></div>
+				<div class="button home"><a href="products/">Products</a></div>
 			</div>
 			<div class="image">
 				<img src="/images/biotech-home.jpg" />
