--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 title: Gokulam Biotech
 description: Leading Bio-Fertilizer Manufacturer in India
 ---
+
+<script type="application/ld+json">
+{ "@context": "http://schema.org",
+ "@type": "organization",
+ "url": "https://www.gokulambiotech.com",
+ "name": "Gokulam Enterprises",
+ "logo": "https://www.gokulambiotech.com/images/Gokulamlogo.png",
+ "sameAs": [
+    "https://www.facebook.com/gokulambiotec",
+    "https://twitter.com/GokulamBioTech"
+  ],
+ "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "+91-413-2611455",
+    "contactType": "Customer service",
+    "areaServed": "IN"
+  },{
+    "@type": "ContactPoint",
+    "telephone": "+91-94431-49095",
+    "contactType": "sales",
+    "areaServed": "IN"
+  }]}
+}
+</script>
+
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable"><strong>Gokulam Biotech</strong></h1>
