--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 { "@context": "http://schema.org",
  "@type": "organization",
  "url": "https://www.gokulambiotech.com",
- "name": "Gokulam Enterprises",
+ "name": "Gokulam Biotech",
  "logo": "https://www.gokulambiotech.com/images/Gokulamlogo.png",
  "sameAs": [
     "https://www.facebook.com/gokulambiotec",
