contact map modified

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@ offices:
   - name: Head Quarters
     color: "#4a4a4a"
     map:
-      latitude: 11.7929453
-      longitude: 79.7668783
+      latitude: 11.794330
+      longitude: 79.770279
       address: "36 Sri Ram Nagar, Cuddalore-Pondy Main Road, Kanniakoil, Pondicherry, India"
       Landline: +91-413-2611455
       Mobile: +91-94431 49095
