--- a/certifications.html
+++ b/certifications.html
@@ -3,18 +3,16 @@ title: Certifications
 heading: Gokulam Biotech Certifications
 description: We care about quality and compliance
 ---
-<ul class="staff">
+<ul class="products">
 	{% for certs in site.certifications %}
     <li>
-      <!-- <div class="square-image"><img src="{% include relative-src.html src=product.image_path %}" alt="{{ product.name }}"/></div> -->
-			<div class="name">
-        <div class="square-image"><img src="{% include relative-src.html src=certs.image_path %}" alt="{{ certs.name }}"/></div>
-        <a href="{% include relative-src.html src=certs.link %}
-        " class="{{ class }}" {% if certs.new_window %}target="_blank"{% endif %}>
-          {{ certs.name}}
-        </a>
+        <div class="medium-image">
+          <a href="{% include relative-src.html src=certs.link %}
+          " class="{{ class }}" {% if certs.new_window %}target="_blank"{% endif %}>
+          <img src="{% include relative-src.html src=certs.image_path %}" alt="{{certs.url}}"/>
+            {{ certs.name}}
+          </a>
         </div>
-			<div class="position">{{ certs.shortdescription}}</div>
 		</li>
 	{% endfor %}
 </ul>
