--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ offices:
     map:
       latitude: 11.794330
       longitude: 79.770279
-      address: "36 Sri Ram Nagar, Cuddalore-Pondy Main Road, Kanniakoil, Pondicherry, India"
+      address: "36 Sri Ram Nagar, Cuddalore-Pondy Main Road, Kanniakoil, Pondicherry, 607 402, India"
       Landline: +91-413-2611455
       Mobile: +91-94431 49095
       email: gokulambiotech@gmail.com
