fixed uncle comments

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-title: Gokulam BioTech
+title: Gokulam Biotech
 description: We are pioneers in the field of liquid based formulations of bio products such as bio fertilizers, bio pesticides and bio fungicides in India.
 ---
 
@@ -35,12 +35,12 @@ circle where organic manure biofertilizers regained importance.</p>
 
 <p>
 In order to improve soil health, protect the environment, and provide nutrients to crops
-in a natural way, GOKULAM BIOTECH has introduced various BIOFERTILIZERS in
+in a natural way Gokulam Biotech has introduced various BioFertilizers in
 </p>
 
-<h3> LIQUID formulations.</h3>
+<h3> Liquid formulations.</h3>
 <p>
-Liquid formulations of biofertilizers of GOKULAM BIOTECH are better in terms of
-virulency and shelf life than carrier - based biofertilizers or liquid broth formulations. LIQUID
-biofertilizers of GOKULAM BIOTECH have a shelf life of more than one year.
+Liquid formulations of biofertilizers of Gokulam Biotech are better in terms of
+virulency and shelf life than carrier - based biofertilizers or liquid broth formulations. Liquid
+biofertilizers of Gokulam Biotech have a shelf life of more than one year.
 </p>
