--- a/products.html
+++ b/products.html
@@ -1,6 +1,6 @@
 ---
 title: Products
-heading: Gokulam BioTech Products
+heading: Gokulam Biotech Products
 description: All products have minimum 1 year shelf-life.
 ---
 <div class="content">
