--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,58 @@
 ---
 title: Contact
-heading: Get in touch today
-description: We'd love to help you improve your Farming.
+heading: Get in touch with us today
+description: We'd love to help you improve your Farming and Revenue.
 
 offices:
   - name: Head Quarters
     color: "#4a4a4a"
+    Landline: +91-413-2611455
+    Mobile: +91-94431 49095
+    email: crk53kris@gmail.com
     map:
       latitude: 11.794330
       longitude: 79.770279
       address: "36 Sri Ram Nagar, Cuddalore-Pondy Main Road, Kanniakoil, Pondicherry, 607 402, India"
-      Landline: +91-413-2611455
-      Mobile: +91-94431 49095
-      email: gokulambiotech@gmail.com
       googledirection:
 
   - name: Sales Office
     color: "#8e8e8e"
+    email: gokulambiotech@gmail.com
+    Landline: +91-413-2611455
     map:
       latitude: 19.077655
       longitude: 72.881175
-      address: "Opening Soon, North-India"
+      address: "Opening Soon, North, India"
 
 map:
   latitude: 11.7929453
   longitude: 79.7668783
-  address: "36 Sri Ram Nagar, Cuddalore-Pondy Main Road, Kanniakoil, Pondicherry, India"
-  zoom: 13
+  address: "36 Sri Ram Nagar, Cuddalore-Pondy Main Road, Kanniakoil, Pondicherry, 607 402, India"
+  zoom: 15
 ---
 <div class="plans">
-	{% for plan in page.offices %}
+	{% for office in page.offices %}
 		<ul class="plan">
-			<li style="background: {{ plan.color }}">
-				<h3>{{ plan.name }}</h3>
+			<li style="background: {{ office.color }}">
+				<h3>{{ office.name }}</h3>
 			</li>
       <li>
+        <h2>Address</h2> (Google Maps):
       <address>
-        Google Maps:
           <a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">
-          {{ plan.map.address | replace: ", ", ", <br>" }}</a></address>
+          {{ office.map.address | replace: ", ", ", <br>" }}</a>
+      </address>
 
-        {% if plan.map.Landline %}
+        {% if office.Landline %}
           <p>
-            Landline: {{plan.map.Landline}} </br>
-            {% if plan.map.Mobile %}
-            Mobile: {{plan.map.Mobile}}</br>
-            {% if plan.map.email %}
-            email:<a href="mailto:{{plan.map.email}}">{{plan.map.email}}<a></br>
-          </p>
+            Landline: {{office.Landline}} </br>
             {% endif %}
-          {% endif %}
+            {% if office.Mobile %}
+            Mobile: {{office.Mobile}}</br>
+            {% endif %}
+            {% if office.email %}
+            email:<a href="mailto:{{office.map.email}}">{{office.email}}</a></br>
+          </p>
         {% endif %}
       </li>
     </ul>
