email addresses added and tested

--- a/careers.html
+++ b/careers.html
@@ -28,7 +28,7 @@ future-positions:
 
 faq:
   - question: How do I apply for the job?
-    answer: Send your cv and a coverletter to the contact our HR email address <a href="mailto:">gokulambiotech@gmail.com</a>.
+    answer: Send your cv and a coverletter to the contact our HR email address <a href="mailto:hr@gokulambiotech.com">hr@gokulambiotech.com</a>.
   - question: How many days it might take to get a response?
     answer: If your CV and profile is interesting, you will get a response within two weeks. Thanks for your interest otherwise!
 ---
