--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ offices:
     color: "#4a4a4a"
     Landline: +91-413-2611455
     Mobile: +91-94431 49095
-    email: crk53kris@gmail.com
+    email: info@gokulambiotech.com
     map:
       latitude: 11.794330
       longitude: 79.770279
@@ -17,7 +17,7 @@ offices:
 
   - name: Sales Office
     color: "#8e8e8e"
-    email: gokulambiotech@gmail.com
+    email: admin@gokulambiotech.com
     Landline: +91-413-2611455
     map:
       latitude: 19.077655
@@ -51,7 +51,7 @@ map:
             Mobile: {{office.Mobile}}</br>
             {% endif %}
             {% if office.email %}
-            email:<a href="mailto:{{office.map.email}}">{{office.email}}</a></br>
+            email:<a href="mailto:{{office.email}}">{{office.email}}</a></br>
           </p>
         {% endif %}
       </li>
