Added Title and Edited Products Page for better indexing

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-title: Gokulam Biotech
+title: About Us - Our Vision
 description: We are pioneers in the field of liquid based formulations of bio products such as bio fertilizers, bio pesticides and bio fungicides in India.
 ---
 
