--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 ---
-title: Contact
+title: Contact Us
 heading: Get in touch with us today
 description: We'd love to help you improve your Farming and Revenue.
 
