fixed font issues, need to add content

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ In order to improve soil health, protect the environment, and provide nutrients 
 in a natural way Gokulam Biotech has introduced various BioFertilizers in
 </p>
 
-<h3> Liquid formulations.</h3>
+<h2> Liquid formulations</h2>
 <p>
 Liquid formulations of biofertilizers of Gokulam Biotech are better in terms of
 virulency and shelf life than carrier - based biofertilizers or liquid broth formulations. Liquid
