--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@ description: Leading Bio-Fertilizer Manufacturer in India
 			<div class="text editable">
 				<h2>How can you <strong>Increase</strong> your harvesting revenue?</h2>
 				<p> No Chemicals and No Side Effects!</p>
-				<h3>Check our Organic Farming Products</h3>
 				<section>
-				<div class="button home"><a href="products/">Products</a></div>
+				<div class="button home"><a href="products/">Our Products</a></div>
 			 </section>
 			</div>
 			<div class="image">
@@ -40,8 +39,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 				</div>
 				<blockquote>
 					<h2>Gokulam Biotech's <strong> Scientists research and develop</strong> state-of-the-art solutions.</h2>
-					<p class="editable"> check out our success stories in the blog section.</p>
-					<p class="editable author"><a href="/blog/" target="_blank">Blog</a>: Success Stories </p>
+					<p class="editable"> check out our success stories in the <a href="/blog/" target="_blank">Blog section</a> </p>
 				</blockquote>
 			</div>
 		</div>
