--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@ title: Products
 heading: Gokulam Biotech Products
 description: All products have minimum 1 year shelf-life.
 ---
+
 <div class="content">
 	<section class="page">
 		<div class="container {% if page.full_width %}max-container{% endif %}">
@@ -16,7 +17,7 @@ description: All products have minimum 1 year shelf-life.
 			{% endif %}
 		</div>
 
-    <div class="container">
+  <div class="container">
       {% for link in site.data.navigation %}
         {% if link.subfolder[0] %}
             <ul class="products">
@@ -33,8 +34,14 @@ description: All products have minimum 1 year shelf-life.
         {% endif %}
       {% endfor %}
     </div>
+		<div class="text-container">
+			<div>
+				<a href="/download/Gokulam-eBook.pdf">
+				<img src="/images/products/gokulambiotechproducts.png"/>
+			</a>
+			</div>
+		</div>
 	</section>
-</div>
 
 <section class="bottom-cta">
   <h2 class="editable"><strong>Gokulam Biotech</strong> - Comprehensive Product List</h2>
