fixed-img-alt-homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 			liquid based formulations of bio products such as bio fertilizers, bio
 			pesticides and bio fungicides.</p>
 		<div>
-			<img src="/images/biofarm.jpg"/>
+			<img src="/images/biofarm.jpg" alt="biofarm"/>
 		</div>
 	</div>
 </section>
@@ -25,7 +25,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 			 </section>
 			</div>
 			<div class="image">
-				<img src="/images/tn-farming.jpg"/>
+				<img src="/images/tn-farming.jpg"/ alt="farmer">
 				<a href="https://www.flickr.com/photos/tataimitra/9421742217/" target="_blank">Source: Flickr</a>
 			</div>
 		</div>
@@ -35,7 +35,7 @@ description: Leading Bio-Fertilizer Manufacturer in India
 		<div class="container flex">
 			<div class="testimonial-block">
 				<div class="image">
-					<img src="/images/ResearchProcess.svg">
+					<img src="/images/ResearchProcess.svg" alt="research process">
 				</div>
 				<blockquote>
 					<h2>Gokulam Biotech's <strong> Scientists research and develop</strong> state-of-the-art solutions.</h2>
